Bug 39528 - UI: Object pane in Navigator disappears when reduce height
Summary: UI: Object pane in Navigator disappears when reduce height
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium normal
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard:
Keywords: regression
: 43197 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-07-25 07:34 UTC by Rainer Bielefeld Retired
Modified: 2011-12-12 00:56 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing "empty" NAvigator (118.65 KB, image/png)
2011-07-25 07:34 UTC, Rainer Bielefeld Retired
Details
screenshot (102.26 KB, image/png)
2011-09-06 09:11 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2011-07-25 07:34:09 UTC
Created attachment 49527 [details]
Screenshot showing "empty" NAvigator

I saw that with Master "LibO-dev 3.4.5  – WIN7  Home Premium  (64bit) English UI 
[(Build ID:d337f79-a24c961-2865670-9752b71-7f8fd43
	2fdd60d-fd28b6a-fd7bf20-aa369cb-28da3fb
	6a9633a-931d089-ecd263f-c9b55e9-b31b807
	82ff335-599f7e9-bc6a545-1926fdf)]"

Steps to reproduce:

1. open sample from Bug 39519 - Copy slide by drag and drop causes 
   double use of user defined slide name
2. Open floating Navigator
3. Move mouse pointer to bottom end of navigator so that pointer view changes
4. Click bottom border of Navigator and drag up to reduce height
   Expected: there is a minimum size (with visible objects in Navigator 
             objects pane) that can not be dropped below
   Actual: you can reduce Navigator height until white Navigator 
           objects pane disappears. Increasing height will not bring back
           objects pane (or only a unusable small one).
Comment 1 Jeffrey 2011-07-26 07:36:12 UTC
Confirmed for Master -- LibreOffice 3.5 on OpenSuse Linux.

Thanks for the steps and the screenshot. After trying to minimize navigator, dragging it out does not render the entire box unusable, just a lot of gray space. If dragged large enough, some slides/contents will reappear in the box.
Comment 2 Jeffrey 2011-07-26 07:36:31 UTC
Confirmed for Master -- LibreOffice 3.5 on OpenSuse Linux.

Thanks for the steps and the screenshot. After trying to minimize navigator, dragging it out does not render the entire box unusable, just a lot of gray space. If dragged large enough, some slides/contents will reappear in the box.
Comment 3 Rainer Bielefeld Retired 2011-08-01 02:02:13 UTC
Due to comments
Comment 4 Rainer Bielefeld Retired 2011-09-06 09:10:12 UTC
That worked with 3.4. so REGRESSION. And still a problem with Server installation of Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID:  3b32204-7f92fce-2ba0a9f)]"
Comment 5 Rainer Bielefeld Retired 2011-09-06 09:11:59 UTC
Created attachment 50939 [details]
screenshot

Also a problem with docked Navigator, as the screenshot shows.
Comment 6 Rainer Bielefeld Retired 2011-12-09 04:19:55 UTC
Ivan:
I saw you active in some UI improvement, can you help here?
Comment 7 Ivan Timofeev (retired) 2011-12-09 06:19:26 UTC
(In reply to comment #6)
> Ivan:
> I saw you active in some UI improvement, can you help here?

It seems I've found the cause. But I need some more code reading... 
By the way, no need to download a special doc to reproduce the bug, it appears even on an empty doc.
Comment 8 Ivan Timofeev (retired) 2011-12-09 09:36:58 UTC
fixed with http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5&id=8c763915fbb11a261dbbf64280cabeefb7ca6c6a 
Thank you for the report!
Comment 9 Jean-Baptiste Faure 2011-12-09 12:50:34 UTC
*** Bug 43197 has been marked as a duplicate of this bug. ***
Comment 10 Rainer Bielefeld Retired 2011-12-12 00:56:16 UTC
Works fine now with Server Installation of  "LibreOffice 3.5.0 Beta0-based - WIN7 Home Premium (64bit) German UI [Build-ID: f923851-7f15fca-1f1fd1a-ca8e46d-5bcbce4] Windows_Release_Configuration  11-Dec-2011 06:51"