fdo#39528: do not lose height of tree list box in Navigator